image postion moved to the center of the screen, text changed to quotes in vidoe games, add reviews page done just cant get the routes working yet

--- a/gamesreview/templates/index.html
+++ b/gamesreview/templates/index.html
@@ -3,18 +3,18 @@
 <div class="slideshow-container">
 
   <div class="mySlides">
-    <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-    <p class="author">- John Keats</p>
+    <q>"You don't get to live a bad life and have good things happen to you."</q>
+    <p class="author">- Arthur Morgan</p>
   </div>
 
   <div class="mySlides">
-    <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-    <p class="author">- Ernest Hemingway</p>
+    <q> “I used to be an adventurer like you, then I took an arrow to the knee.”</q> </q>
+    <p class="author"> Whiterun Guard</p>
   </div>
 
   <div class="mySlides">
-    <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-    <p class="author">- Thomas A. Edison</p>
+    <q>" Close your heart to their desperation, close your heart to their suffering, do not allow yourself to feel for them, they will not feel for you"</q>
+    <p class="author"> Kratos</p>
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
