--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -19,16 +19,17 @@
     </div>
 </div>
 <ul class="collapsible -text">
-  {%  for publisher in publisher %}
+  {%  for pub in publisher %}
   {% for game in game %}
   <li>
     <div class="collapsible-header green white-text">
       <i class="fa-solid fa-gamepad-modern"></i>
-      <strong>{{ publisher.publisher_name }}</strong>
+      <strong>{{ pub.publisher_name }}</strong>
     </div>
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
       <div>
+        
         <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn green accent-4">Edit</a>
         <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
         <!-- Modal -->
@@ -39,12 +40,12 @@
         </div>
         <div class="modal-footer green darken-2">
           <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red">Delete</a>
+          {% endfor %}
+          {% endfor %}
         </div>
       </div>
     </div>
    </div>  
   </li>
- {% endfor %}
- {% endfor %}
 </ul>
 {% endblock %}
