rework on database for reivews as functions wasnt working

--- a/gamesreview/templates/reviews.html
+++ b/gamesreview/templates/reviews.html
@@ -12,7 +12,7 @@
 
 <div class="row col s12 m3 l6">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_reviews') }}" class="btn-large green darken-2">
+        <a href="{{ url_for('reviews') }}" class="btn-large green darken-2">
             Add Reviews<i class="fas fa-plus-square right"></i>
         </a>
     </div>
