--- a/gamesreview/templates/add_reviews.html
+++ b/gamesreview/templates/add_reviews.html
@@ -12,13 +12,13 @@
 
 <div class="row col s12 m3 l6">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_reviews') }}" class="btn-large green darken-2">
+        <a href="{{ url_for('reviews') }}" class="btn-large green darken-2">
             Add Reviews<i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
 <ul class="collection col s12 green darken-2" method="post" action="{{ url_for('add_reviews') }}">
-  <form method="post" action="">
+  <form method="post" action="{{ url_for('reviews') }}">
     <div class="input-field col s12 white-text"></div>
     {%  for reviews in review %}
     <option value="{{ review.game_reivew}}">{{ review.game_reivew}}</option>
