data not adding to the database getting a new error

--- a/gamesreview/templates/add_reviews.html
+++ b/gamesreview/templates/add_reviews.html
@@ -53,6 +53,7 @@
         </button>
     </div>
   </div>
+  <input type="number" id="game_id" name="game_id" value="{{ request.args.get('game_id') }}" class="hide"> 
  </form>
 </ul>
 
