--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -29,7 +29,7 @@
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
       <div>
-        
+        <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn green accent-4">Review</a>
         <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn green accent-4">Edit</a>
         <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
         <!-- Modal -->
