--- a/gamesreviewbeta/templates/edit_reviews.html
+++ b/gamesreviewbeta/templates/edit_reviews.html
@@ -4,7 +4,7 @@
     <div class="s1 m2">
       <div class="card transparent">
         <div class="card-content white-text text-darken-4 center-align">
-          <span class="card-title">Reviews</span>
+          <span class="card-title">Edit Reviews</span>
         </div>
       </div>
     </div>
@@ -46,6 +46,14 @@
       <label for="game_genre">Game Genre</label>
     </li>
   </div>
+  <div class="input-field col s12 white-text">
+    <li class="collection-item avatar green darken-2">
+        <span class="title">Game ID</span>
+      <img src="{{url_for('static', filename='image/genre.png')}}" alt="" class="circle">
+      <input id="game_genre" name="game_genre" minlength="1" maxlength="20" type="text" class="validate">
+      <label for="game_genre">Game ID</label>
+    </li>
+  </div>
   <div class="row">
     <div class="col s12 center-align">
         <button type="submit" class="btn-large green darken-2 white-text">
@@ -53,7 +61,6 @@
         </button>
     </div>
   </div>
-  <input type="number" id="game_id" name="game_id" value="{{ request.args.get('game_id') }}" class="hide"> 
  </form>
 </ul>
 
