--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -10,7 +10,6 @@
       </div>
     </div>
   </div>
-
 <div class="row col s12 m3 l6">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_game') }}" class="btn-large green darken-2">
@@ -18,7 +17,7 @@
         </a>
     </div>
 </div>
-<ul class="collapsible -text">
+<ul class="collapsible">
   {%  for pub in publisher %}
   {% for game in game %}
   <li>
@@ -29,7 +28,7 @@
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
       <div>
-        <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn green accent-4">Review</a>
+        <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
         <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn green accent-4">Edit</a>
         <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
         <!-- Modal -->
@@ -40,12 +39,12 @@
         </div>
         <div class="modal-footer green darken-2">
           <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red">Delete</a>
-          {% endfor %}
-          {% endfor %}
         </div>
+       </div>
       </div>
     </div>
-   </div>  
   </li>
+  {% endfor %}
+  {% endfor %}
 </ul>
 {% endblock %}
