--- a/gamesreviewbeta/static/css/style.css
+++ b/gamesreviewbeta/static/css/style.css
@@ -92,12 +92,12 @@ q {
 
 
 .nav-wrapper a{
-    color: #01579b;
+    color: white;
     font-size: 30px;
     font-family: 'Cookie', cursive;
 }
 .sidenav a{
-  color:#01579b;
+  color: white;
 }
 /* responsiveness for nav wrapper */
 @media (max-width: 920px){
@@ -229,4 +229,18 @@ body {
 
 p{
  text-align: center;
+}
+
+
+/* user register link and login register links  */
+
+#us{
+  text-align: center;
+  margin-top: 1%;
+
+}
+
+/* flash messages */
+.flashes h5{
+  line-height: 2;
 }
