--- a/gamesreviewbeta/templates/base.html
+++ b/gamesreviewbeta/templates/base.html
@@ -23,8 +23,8 @@
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('games') }}">Games</a></li>
         <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
-        <li><a href="">Login</a></li>
-        <li><a href="">Register</a></li>
+        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
         <li><a href="{{ url_for('titles') }}">Titles</a></li>
         <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
       </ul>
@@ -44,6 +44,20 @@
   </div>
 
 </header>
+<section>
+  <!-- flash messages -->
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+      {% for message in messages %}
+          <div class="row flashes">
+              <h5 class="green draken-2 white-text center-align">{{ message }}</h5>
+          </div>
+      {% endfor %}
+  {% endif %}
+{% endwith %}
+
+
+</section>
 
 <main class="container">
     {% block content %}
