--- a/gamesreviewbeta/templates/register.html
+++ b/gamesreviewbeta/templates/register.html
@@ -3,27 +3,27 @@
 <h3 class="center-align"></h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel green darken-2">
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix dark blue-text text-darken-4"></i>
-						<input id="username" name="username" type="text" class="validate">
+						<i class="fas fa-user-plus prefix dark white-text"></i>
+						<input id="username" name="username" type="text" minlength="3" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
 						<label for="username">Username</label>
 					</div>
                 </div>
                 <!-- passowrd -->
                 <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix blue-text text-darken-4"></i>
-                        <input id="password" name="password" type="password" class="validate">
+						<i class="fas fa-user-lock prefix white-text"></i>
+                        <input id="password" name="password" type="password" minlength="5" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large blue darken-4 green-text-shadow">
+                    <button type="submit" class="col s12 btn-large white green-text text-darken-2">
                         Register <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
