--- a/gamesreviewbeta/templates/reviews.html
+++ b/gamesreviewbeta/templates/reviews.html
@@ -33,7 +33,7 @@
         <a href="{{ url_for('edit_reviews', reviews_id=reviews.id) }}" class="btn green accent-4">Edit</a>
         <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
         <!-- Modal -->
-        <div id="modal-{{ game.id }}" class="modal m4">
+        <div id="modal-{{ review.id }}" class="modal m4">
           <div class="modal-content col m3 green darken-2 white-text">
             <h4>Are you sure you want to delete this Publisher?</h4>
             <p>This action cannot be undone</p>
