login functions added with profile pages added too, logout function just needs adding

--- a/gamesreviewbeta/templates/base.html
+++ b/gamesreviewbeta/templates/base.html
@@ -23,22 +23,25 @@
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('games') }}">Games</a></li>
         <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
-        <li><a href="{{ url_for('login') }}">Login</a></li>
-        <li><a href="{{ url_for('register') }}">Register</a></li>
         <li><a href="{{ url_for('titles') }}">Titles</a></li>
         <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
+        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
+        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+        
       </ul>
 
   <ul class="sidenav green draken-2" id="mobile-demo">
     <li><a href="{{ url_for('index') }}">Home</a></li>
     <li><a href="{{ url_for('games') }}">Games</a></li>
     <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
-    <li><a href="">Login</a></li>
-    <li><a href="">Register</a></li>
     <li><a href="{{ url_for('titles') }}">Titles</a></li>
     <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
+    <li><a href="{{ url_for('login') }}">Login</a></li>
+    <li><a href="{{ url_for('register') }}">Register</a></li>
+    <li><a href="{{ url_for('profile', username=session['user']) }}">Login</a></li>
     </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">Profile</i></a>
    </nav>
 
   </div>
