--- a/gamesreviewbeta/templates/register.html
+++ b/gamesreviewbeta/templates/register.html
@@ -24,7 +24,7 @@
                 <!-- register -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large white green-text text-darken-2">
-                        Register <i class="fas fa-sign-in-alt"></i>
+                        Register Account <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
             </div>
