--- a/gamesreviewbeta/templates/login.html
+++ b/gamesreviewbeta/templates/login.html
@@ -4,13 +4,13 @@
 <h3 class="center-align"></h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel green darken-2">
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-cog prefix white-text text-darken-4"></i>
-						<input id="username" name="username" type="text" minlength="5"
+						<input id="username" name="username" type="text" minlength="1"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
 						<label for="username">Username</label>
 					</div>
