--- a/gamesreviewbeta/templates/base.html
+++ b/gamesreviewbeta/templates/base.html
@@ -21,25 +21,40 @@
       <a href="#!" data-target="mobile-demo" class="sidenav"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('games') }}">Games</a></li>
-        <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
-        <li><a href="{{ url_for('titles') }}">Titles</a></li>
-        <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
-        <li><a href="{{ url_for('login') }}">Login</a></li>
-        <li><a href="{{ url_for('register') }}">Register</a></li>
-        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+      {% if session.user %}
+         <li><a href="{{ url_for('games') }}">Games</a></li>
+         <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
+         <li><a href="{{ url_for('titles') }}">Titles</a></li>
+         <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
+         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+      {% else %}
+         <li><a href="{{ url_for('login') }}">Login</a></li>
+         <li><a href="{{ url_for('register') }}">Register</a></li>
+      {% endif %}  
         
-      </ul>
+        
+        </ul>
 
   <ul class="sidenav green draken-2" id="mobile-demo">
     <li><a href="{{ url_for('index') }}">Home</a></li>
+    {% if session.user %}
     <li><a href="{{ url_for('games') }}">Games</a></li>
     <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
     <li><a href="{{ url_for('titles') }}">Titles</a></li>
     <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
+    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+ {% else %}
     <li><a href="{{ url_for('login') }}">Login</a></li>
     <li><a href="{{ url_for('register') }}">Register</a></li>
-    <li><a href="{{ url_for('profile', username=session['user']) }}">Login</a></li>
+ {% endif %}  
+   
+   
+        
+
+        
+
     </ul>
     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">Profile</i></a>
    </nav>
