sidenav bar working channge to base code

--- a/gamesreviewbeta/templates/base.html
+++ b/gamesreviewbeta/templates/base.html
@@ -18,7 +18,7 @@
   <nav>
     <div class="nav-wrapper green darken-2">
       <a href="#!" class="brand-logo">Games Review</a>
-      <a href="#!" data-target="mobile-demo" class="sidenav"></a>
+      <a href="#!" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('index') }}">Home</a></li>
       {% if session.user %}
@@ -36,7 +36,7 @@
         
         </ul>
 
-  <ul class="sidenav green draken-2" id="mobile-demo">
+  <ul class="sidenav green draken-2" id="mobile-demo" class="sidenav-bars">
     <li><a href="{{ url_for('index') }}">Home</a></li>
     {% if session.user %}
     <li><a href="{{ url_for('games') }}">Games</a></li>
@@ -50,13 +50,7 @@
     <li><a href="{{ url_for('register') }}">Register</a></li>
  {% endif %}  
    
-   
-        
-
-        
-
     </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">Profile</i></a>
    </nav>
 
   </div>
