--- a/gamesreviewbeta/templates/edit_game.html
+++ b/gamesreviewbeta/templates/edit_game.html
@@ -19,7 +19,7 @@
 </div>
 <div class="row card-panel green darken-2">
     <form class="col s12" method="POST" action="{{ url_for('edit_game', game_id=game.id) }}">
-        <!-- category name -->
+        <!-- Publisher name -->
         <div class="row">
             <div class="input-field col s12 green darken-2">
                 <i class="fas fa-folder-open prefix white-text"></i>
