--- a/gamesreviewbeta/templates/reviews.html
+++ b/gamesreviewbeta/templates/reviews.html
@@ -16,29 +16,28 @@
     </a>
   </div>
 </div>
-  {%  if game|length > 0 %} 
 <ul class="collapsible">
-   {% for reviews in reviews %} 
+   {% for review in reviews %} 
     <li>
     <div class="collapsible-header green white-text">
       <i class="fa-solid fa-gamepad-modern"></i>
-      <strong>{{ game.games_name }}</strong> 
+      <strong></strong> 
     </div>
     <div class="collapsible-body white green-text">
-      <p>{{ reviews.game_review }}</p>
-      <p>{{ reviews.game_rating }}</p>
-      <p>{{ reviews.game_genre }}</p>
+      <p>{{ review.game_review }}</p>
+      <p>{{ review.game_rating }}</p>
+      <p>{{ review.game_genre }}</p>
       <div>
-        <a href="{{ url_for('edit_reviews', reviews_id=reviews.id) }}" class="btn green accent-4">Edit</a>
-        <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
+        <a href="{{ url_for('edit_reviews', reviews_id=review.id) }}" class="btn green accent-4">Edit</a>
+        <a href="#modal-{{ reviews.id }}" class="btn red modal-trigger col m4">Delete</a>
         <!-- Modal -->
-        <div id="modal-{{ review.id }}" class="modal m4">
+        <div id="modal-{{ reviews.id }}" class="modal m4">
           <div class="modal-content col m3 green darken-2 white-text">
             <h4>Are you sure you want to delete this Publisher?</h4>
             <p>This action cannot be undone</p>
           </div>
           <div class="modal-footer green darken-2">
-            <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red">Delete</a>
+            <a href="{{ url_for('delete_reviews', reviews_id=review.id) }}" class="btn-large red">Delete</a>
           </div>
         </div>
       </div> 
@@ -46,6 +45,5 @@
   </li>
   {% endfor %} 
 </ul> 
-{% endif %} 
 {% endblock %}
 
