--- a/gamesreviewbeta/templates/games.html
+++ b/gamesreviewbeta/templates/games.html
@@ -3,135 +3,134 @@
 <div class="row">
   <div class="height">
     <div class="col s12 m6 l5">
-        <div class="card green transparent">
+        <div class="card white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}"> 
             <span class="card-title"></span>
           </div>
-          <div class="card-content white-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Red dead redemption 2 follows the exploits of outlaw Arthur Morgan, in a fictionalized representation of the american West.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card green white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/codw.png')}}" alt="">
             <span class="card-title"></span>
-
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Call of Duty: Warzone is a free-to-play battle royale video game released on March 10, 2020, for PlayStation 4, Xbox One, and Microsoft Windows.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image small">
             <img src="{{url_for('static', filename='image/sky.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Skyrim is an open-world fantasy adventure, with a world open for you to explore any way you choose the adventures are endless. </p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card  white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/gta.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow text">Grand Theft Auto V is an action-adventure game played from either a third-person or first-person perspectivey.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/sp.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow text"> After eight years behind the mask, Peter Parker is a crime-fighting master. Feel the full power of a more experienced Spider-Man.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/kartos.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">God of War is the eighth installment in the franchise overall.This game focuses on Norse mythology, follwing kartos and his son.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/obliv.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Oblivion is the 4th game in TES series and is set in the province of Cyrodiil, the heart of the Septim Empire, during the Oblivion Crisis.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/mgp.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Metal Gear Solid V: The Phantom Pain is a stealth game in which players take the role of Punished "Venom" Snake. In a thrid person open world game</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/witcher3.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>The Witcher 3 : Wild Hunt is an action role-playing game with a third-person perspective. Players control Geralt of Rivia , a monster slayer known as the white wolf.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Witcher 3: Is an action role-playing game with a third-person perspective. Players control Geralt, a monster slayer known as the white wolf.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/zelda.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Breath of the Wild is an open world action-adventure game. Players are tasked with exploring the kingdom of Hyrule while controlling Link.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/fallout4.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">Fallout 4 is a post-apocalyptic role-playing game developed by Bethesda Game Studios and published by Bethesda Softworks.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/warriors.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content green-text text-darken-4">
+            <p class="flow-text">The game takes place in a gritty 1979 New York City. The story follows a street gang, the Warriors, and how they had been accused of a murder they didn't commi.</p>
           </div>
         </div>
       </div>
