--- a/gamesreviewbeta/templates/add_reviews.html
+++ b/gamesreviewbeta/templates/add_reviews.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<h3 class="hide"> Reviews </h3>
 <div class="row">
     <div class="s1 m2">
       <div class="card transparent">
