--- a/gamesreviewbeta/templates/games.html
+++ b/gamesreviewbeta/templates/games.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<h3 class="hide"> Reviews </h3>
 <div class="row">
   <div class="height">
     <div class="col s12 m6 l5">
