--- a/gamesreviewbeta/templates/profile.html
+++ b/gamesreviewbeta/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<h3 class="hide"> Reviews </h3>
     <div class="row">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
