--- a/gamesreviewbeta/static/css/style.css
+++ b/gamesreviewbeta/static/css/style.css
@@ -120,11 +120,27 @@ q {
   color: white;
   padding-top: 1%;
   margin-top: 2%;
-  font-weight: 900;
+  font-weight: 700;
   background-color: green;
   opacity: 0.7;
- 
 }
+@media (max-width: 920px){
+  .welcome{
+    font-size: 25px;
+
+  }
+}
+@media (max-width: 620px){
+  .welcome{
+    font-size: 20px/;
+  }
+}
+@media (max-width: 420px){
+  .welcome{
+    font-size: 15px;
+  }
+}
+
 /* image slider */
 .img-slider{
   position: relative;
@@ -174,7 +190,8 @@ q {
 @media (max-width: 420px){
   .img-slider .slide{
     width: 100%;
-    margin-right: 80%; 
+    margin-left: 10%;
+    padding: 50px; 
   }
 }
 
