favicon added to site to replace home symbol

--- a/gamesreviewbeta/templates/index.html
+++ b/gamesreviewbeta/templates/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <h3 class="hide"> Reviews </h3>
-<p class="welcome"> Welcome to Games Reveiw, this reveiw site give the users full control. Want to add a game you can, Want to add a review you can so why not pick a game and leave a reivew today! </p>
+<p class="welcome"> Welcome to Games Review, this review site give the users full control. Want to add a game you can, Want to add a review you can so why not pick a game and leave a reivew today! </p>
 
 <div class="slideshow-container">
 
-  <div class="mySlides">
+  <div class="mySlides">""
     <q>"You don't get to live a bad life and have good things happen to you."</q>
     <p class="author">- Arthur Morgan</p>
   </div>
