--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -19,7 +19,7 @@
 </div>
 {%  if publisher| length > 0 %}
 <ul class="collapsible">
-  {% for game in game %}
+  {% for game in games %}
   <li>
     <div class="collapsible-header green darken-2 white-text">
       <i class="fa-solid fa-gamepad-modern"></i>
@@ -28,9 +28,9 @@
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
       <div>
-        <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
-        <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn green accent-4">Edit</a>
-        <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
+        <a href="{{ url_for('add_reviews', game_id=games.id) }}" class="btn yellow accent-4">Review</a>
+        <a href="{{ url_for('edit_games', game_id=games.id) }}" class="btn green accent-4">Edit</a>
+        <a href="#modal-{{ games.id }}" class="btn red modal-trigger col m4">Delete</a>
         <!-- Modal -->
         <div id="modal-{{ game.id }}" class="modal m4">
         <div class="modal-content col m3 green darken-2 white-text">
@@ -38,7 +38,7 @@
           <p>This action cannot be undone</p>  
         </div>
         <div class="modal-footer green darken-2">
-          <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red">Delete</a>
+          <a href="{{ url_for('delete_game', game_id=games.id) }}" class="btn-large red">Delete</a>
         </div>
        </div>
       </div>
