--- a/gamesreviewbeta/templates/publisher.html
+++ b/gamesreviewbeta/templates/publisher.html
@@ -31,7 +31,7 @@
         <p>Publishers Name</p>
       </div>
       <div class="card-action">
-        <a href="{{ url_for('edit_publisher', publisher_id=publisher.id) }}" class="btn black">Edit</a>
+        <a href="{{ url_for('edit_publisher', publisher_id=p.id) }}" class="btn black">Edit</a>
         <a href="#modal-{{ publisher.id }}" class="btn red modal-trigger">Delete</a>
         <!-- Modal warning messages  -->
         <div id="modal-{{ publisher.id }}" class="modal">
