--- a/gamesreviewbeta/templates/publisher.html
+++ b/gamesreviewbeta/templates/publisher.html
@@ -32,15 +32,15 @@
       </div>
       <div class="card-action">
         <a href="{{ url_for('edit_publisher', publisher_id=p.id) }}" class="btn black">Edit</a>
-        <a href="#modal-{{ publisher.id }}" class="btn red modal-trigger">Delete</a>
+        <a href="#modal-{{ p.id }}" class="btn red modal-trigger">Delete</a>
         <!-- Modal warning messages  -->
-        <div id="modal-{{ publisher.id }}" class="modal">
+        <div id="modal-{{ p.id }}" class="modal">
           <div class="modal-content green darken-2 white-text">
             <h4>Are you sure you want to delete this Publisher?</h4>
             <p>This action cannot be undone</p>          
           </div>
           <div class="modal-footer green darken-2">
-            <a href="{{ url_for('delete_publisher', publisher_id=publisher.id) }}" class="btn-large red col m3 ">Delete</a>
+            <a href="{{ url_for('delete_publisher', publisher_id=p.id) }}" class="btn-large red col m3 ">Delete</a>
           </div>
         </div>
        </div>
