--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -17,36 +17,11 @@
     </a>
   </div>
 </div>
-{%  if publisher| length > 0 %}
-<ul class="collapsible"></ul>
-{% for p in publisher  %}
-{% for game in games %}
-<li>
-  <div class="collapsible-header green darken-2 white-text">
-    <i class="fa-solid fa-gamepad-modern"></i>
-    <strong>{{ p.publisher_name }}</strong>
-  </div>
-  <div class="collapsible-body white green-text">
-    <strong>{{ game.game_name }}</strong>
-    <div>
-      <a href="{{ url_for('add_reviews', game_id=games.id) }}" class="btn yellow accent-4">Review</a>
-      <a href="{{ url_for('edit_games', game_id=games.id) }}" class="btn green accent-4">Edit</a>
-      <a href="#modal-{{ games.id }}" class="btn red modal-trigger col m4">Delete</a>
-      <!-- Modal -->
-      <div id="modal-{{ game.id }}" class="modal m4">
-        <div class="modal-content col m3 green darken-2 white-text">
-          <h4>Are you sure you want to delete this Publisher?</h4>
-          <p>This action cannot be undone</p>
-        </div>
-        <div class="modal-footer green darken-2">
-          <a href="{{ url_for('delete_game', game_id=games.id) }}" class="btn-large red">Delete</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</li>
+{% for p in publisher %}
+{% for game in game %}
+<h1>{{ game.game_name }}</h1>
+<h1>{{ p.publisher_name }}</h1>
+
 {% endfor %}
 {% endfor %}
-</ul>
-{% endif %}
 {% endblock %}
