chanages for loop for publishers

--- a/gamesreviewbeta/templates/publisher.html
+++ b/gamesreviewbeta/templates/publisher.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div class="row">
-  <div></div>
+  <div>
   {% for p in publisher  %}
   <div class="col s12 m5 l3 transparent">
     <div class="card green darken-2 center-align">
