--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -32,7 +32,7 @@
         <p>Game Name</p>
       </div>
       <div class="card-action">
-        <a href="{{ url_for('add_reviews', game_id=games.id) }}" class="btn yellow accent-4">Review</a>
+        <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
         <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
         <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
         <!-- Modal warning messages  -->
