--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -39,7 +39,7 @@
           <!-- Modal warning messages  -->
           <div id="modal-{{ p.id }}" class="modal">
             <div class="modal-content green darken-2 white-text">
-              <h4>Are you sure you want to delete this Publisher?</h4>
+              <h4>Are you sure you want to delete this Game?</h4>
               <p>This action cannot be undone</p>
             </div>
             <div class="modal-footer green darken-2">
@@ -48,10 +48,8 @@
           </div>
         </div>
       </div>
-      {% endfor %}
-      {% endfor %}
     </div>
-  </div>
-</div>
+    {% endfor %}
+    {% endfor %}
 {% endif %}
 {% endblock %}
