chanages to css page

--- a/gamesreviewbeta/templates/add_game.html
+++ b/gamesreviewbeta/templates/add_game.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="input-field col s12 green darken-2">
                 <i class="fas fa-folder-open prefix white-text"></i>
-                <textarea  id="publisher_name" name="publisher_name" minlength="4" maxlength="50" 
+                <textarea  id="game_name" name="game_name" minlength="4" maxlength="50" 
                 type="text" class="materialize-textare validate" required></textarea>
                 <label for="game_name"></label>
             </div>
