--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -34,11 +34,11 @@
           <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
             <!-- Modal for delete warning message -->
             <div id="modal-{{ game.id }}" class="modal">
-               <div class="modal-content">
+               <div class="modal-content green darken-2 white-text">
                   <h4>Are you sure you want to delete this Game?</h4>
                   <p>This action cannot be undone</p>
                </div>
-               <div class="modal-footer">
+               <div class="modal-footer green darken-2 white-text">
                   <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red col m3 ">Delete</a>
                      class="btn red">Delete</a>
                </div>
