chanages to routes to stop dupliaction

--- a/gamesreviewbeta/templates/titles.html
+++ b/gamesreviewbeta/templates/titles.html
@@ -17,7 +17,7 @@
     </a>
   </div>
 </div>
-<!--this is so that the colleagues added appear in the collapsible drop down menu-->
+<!--this is so that the game name appears in the collapsible drop down menu-->
 {% if publisher|length > 0 %}
 <ul class="collapsible">
   {% for p in publisher %}
@@ -49,6 +49,5 @@
    {% endfor %}
   {% endfor %}
 </ul>
-{% endif %} 
-
+{% endif %}
 {% endblock %}
