--- a/gamesreviewc/templates/base.html
+++ b/gamesreviewc/templates/base.html
@@ -89,13 +89,11 @@
         <h5 class="white-text">Footer Content</h5>
         <p class="grey-text text-lighten-4">All images used in this site are for educational purposes only .</p>
       </div>
-      <div class="col l4 offset-l2 s12">
-      </div>
     </div>
   </div>
   <div class="footer-copyright">
     <div class="container">
-    © 2014 Copyright Text
+    © jon9851
     </div>
   </div>
 </footer>
