--- a/gamesreviewc/templates/base.html
+++ b/gamesreviewc/templates/base.html
@@ -81,21 +81,14 @@
     {% block content %}
     {% endblock %}
 </main>
- 
-<footer class="page-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12 green darken-2">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">All images used in this site are for educational purposes only .</p>
+<footer>
+    <footer class="page-footer green darken-2">
+      <div class="footer-copyright">
+          <div class="container">
+             All images used in this site are for educational purposes only.
+              <a class="blue-text text-darken-4 right" href="https://codeinstitute.net" target="_blank">&copy; Code Institute</a>
+          </div>
       </div>
-    </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container">
-    © jon9851
-    </div>
-  </div>
 </footer>
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
