meta tag added to base html

--- a/gamesreviewc/templates/base.html
+++ b/gamesreviewc/templates/base.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta
+    name="description"
+    content="Games Review app,add,edit,delete publishers, games,reviews from the databses and assign"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap">
     <script src="https://kit.fontawesome.com/8f8d6e0652.js" crossorigin="anonymous"></script>
